# PFSF-CORE

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PFSF_CORE_KNOWLEDGE.md  README.md  architecture_review.md  br_core_imports.txt  br_run_client.bat  check_deps.py  debug_cp.bat  imports.txt  run_native_isolation_test.bat  test_headless_mc.bat
.github/workflows/: build.yml  check-abi.yml  check-citations.yml  perf-gate.yml  release.yml  shaders-drift.yml
Block Reality/: .gitignore  CHANGELOG.md  PFSF_ARCHITECTURE_RECOMMENDATION.md  README.md  build.gradle  gradle.properties  gradlew  settings.gradle  test_output.txt
Block Reality/api/: build.gradle  pfsf-crash-13967.trace  pfsf-crash-14774.trace  pfsf-crash-15614.trace  pfsf-crash-18412.trace  pfsf-crash-19959.trace  pfsf-crash-23450.trace  pfsf-crash-29448.trace  pfsf-crash-30497.trace  pfsf-crash-32738.trace  pfsf-crash-34802.trace  pfsf-crash-38870.trace  pfsf-crash-40015.trace  pfsf-crash-45849.trace  pfsf-crash-64414.trace  pfsf-crash-69141.trace  pfsf-crash-73892.trace  pfsf-crash-86939.trace
Block Reality/api/src/main/native/: BRNRDNative.cpp  CMakeLists.txt
Block Reality/docs/L1-api/L2-physics/: L3-fluid-simulation.md  L3-structural-anchoring.md  index.md
Block Reality/docs/design/: pfsf-native-structural-memory.md  pfsf-native-unified-memory.md
Block Reality/experimental/reborn/: __init__.py  config.py  pipeline.py  session.py
Block Reality/experimental/reborn/experiments/: __init__.py  exp_001_simp_convergence.py  exp_002_fno_stress_accuracy.py  exp_003_gaudi_curvature.py  exp_004_hybr_style_cond.py  exp_005_end_to_end.py  exp_006_style_training.py  exp_007_ablation.py  exp_008_a100_benchmark.py
Block Reality/experimental/reborn/models/: __init__.py  diff_gaudi.py  diff_sdf_ops.py  diff_zaha.py  fno_proxy.py  gaudi_style.py  hybr_proxy.py  stress_path.py  style_net.py  zaha_style.py
Block Reality/experimental/reborn/stages/: __init__.py  diff_topo.py  nurbs_bridge.py  style_skin.py  topo_optimizer.py  voxel_massing.py
Block Reality/experimental/reborn/tests/: test_gaudi_style.py  test_style_training.py  test_topo_optimizer.py  (+1 more)
Block Reality/merged-resources/: pack.mcmeta
Block Reality/scripts/: Stage1_VkInstance.java  Stage2_VMAInit.java  Stage3_Shaderc.java  Stage4_ComputePipeline.java  run_vulkan_smoke_tests.sh
L1-native/: CMakeLists.txt
L1-native/libbr_core/: CMakeLists.txt
L1-native/libbr_core/include/br_core/: br_core.h  callback_bus.h  cmdbuf_pool.h  compute_pipeline.h  descriptor_cache.h  jni_helpers.h  pipeline_cache.h  spirv_registry.h  timeline_sync.h  vma_allocator.h  vulkan_device.h
L1-native/libbr_core/src/: br_core.cpp  callback_bus.cpp  cmdbuf_pool.cpp  compute_pipeline.cpp  descriptor_cache.cpp  jni_helpers.cpp  pipeline_cache.cpp  spirv_registry.cpp  timeline_sync.cpp  vma_allocator.cpp  vulkan_device.cpp
L1-native/libpfsf/: CMakeLists.txt
L1-native/libpfsf/abi/: pfsf_v1.abi.json
L1-native/libpfsf/include/pfsf/: pfsf.h  pfsf_compute.h  pfsf_diagnostics.h  pfsf_extension.h  pfsf_plan.h  pfsf_trace.h  pfsf_types.h  pfsf_version.h
L1-native/libpfsf/src/: pfsf_api.cpp  pfsf_engine.cpp  pfsf_engine.h
L1-native/libpfsf/src/compute/: arch_factor.cpp  arm_map.cpp  aug_kernels.cpp  aug_kernels.h  chebyshev.cpp  conductivity.cpp  constants.h  divergence.cpp  downsample.cpp  features.cpp  morton.cpp  normalize.cpp  phantom_edges.cpp  timoshenko.cpp  version.cpp  wind_bias.cpp  wind_pressure.cpp
L1-native/libpfsf/src/core/: buffer_manager.cpp  buffer_manager.h  constants.h  island_buffer.cpp  island_buffer.h  vulkan_context.cpp  vulkan_context.h  vulkan_loader_fix.cpp
L1-native/libpfsf/src/diag/: crash.cpp
L1-native/libpfsf/src/example/: cpu_backend.cpp  cpu_backend.h  fixture_loader.cpp  fixture_loader.h  main.cpp  pfsf_cli_args.cpp  pfsf_cli_args.h  vk_backend.cpp  vk_backend.h
L1-native/libpfsf/src/ext/: augmentation.cpp  hooks.cpp  plan_dispatcher.cpp
L1-native/libpfsf/src/jni/: native_pfsf_bridge.cpp
L1-native/libpfsf/src/solver/: amg_builder.cpp  amg_builder.h  dispatcher.cpp  dispatcher.h  dispatcher_amg.cpp  dispatcher_pcg.cpp  dispatcher_vcycle.cpp  failure_scan.cpp  failure_scan.h  jacobi_solver.cpp  jacobi_solver.h  pcg_solver.cpp  pcg_solver.h  phase_field.cpp  phase_field.h  sparse_scatter.cpp  sparse_scatter.h  vcycle_solver.cpp  vcycle_solver.h
L1-native/libpfsf/src/trace/: ring_buffer.cpp
L1-native/librender/: CMakeLists.txt
L1-native/librender/include/render/: render.h
L1-native/librender/src/: render_api.cpp
L1-native/librender/src/core/: render_engine.cpp
L1-native/librender/src/jni/: native_render_bridge.cpp
L1-native/shaders/: CMakeLists.txt  pack_spirv.cmake
L1-native/shaders/prebuilt/: README.md
L1-native/tests/: CMakeLists.txt
L1-native/tests/physics/: CMakeLists.txt  test_normalize_parity.cpp  test_vcycle_heuristic_parity.cpp  test_wind_bias_parity.cpp
L1-tooling/: quick-install.bat  quick-install.ps1  quick-install.sh  start-trainer.bat  start-trainer.ps1  start-trainer.sh
L1-tooling/docker/: .dockerignore  Dockerfile
L1-tooling/fix/: fix_imports.py  fix_only_in_client.py  fix_registry.py
L1-tooling/ide/: Block-Realityapi-Fast-design.code-workspace
L1-tooling/install/: INSTALL.md
benchmarks/baselines/: v0.3e-linux-x64.json  v0.4-linux-x64.json  v0.4-win-x64.json
debug/standalone/: NativePFSFBridge.java  PFSFPhysicsTest.java
dev-scripts/: test_deps_load.py  test_dll.py  test_dll_detailed.py  test_err.cpp  test_gradle_props.bat  test_load_dll.cpp  test_local_cpp_core.bat
dev-scripts/debug/standalone/: run_test.sh
research/: PFSF_GPU_ACADEMIC_AUDIT_2026-04-23.md  PFSF_GPU_ACADEMIC_AUDIT_2026-04-23_zh.md  gpu_hardproof.cpp  vulkan_standalone_probe.cpp
research/paper_data/: STENCIL_MATHEMATICS.md
research/paper_data/raw/: performance_metrics.csv  real_hardware_performance.csv  validation_results.csv
scripts/: check_abi.py  check_citations.py  emit_junit_annotations.py  emit_prebuilt_spirv.sh  extract-fixture.sh  generate_canonical_fixtures.py  pfsf_crash_decode.py  pfsf_perf_gate.py
(+583 files in other folders)
